# TeXhelper

./: CMakeLists.txt  LICENSE  gaussian.cpp  main.cpp  matrix.txt
connectors/: python.h  vim.h
main/: exception.h  fraction.h  matrix.h  solver.h  tex.h  utils.h
parsers/: files.h  jupyter.h  terminal.h
